# soundfont-godot

./: .gitignore  CMakeLists.txt  NOTICE  README.md  SConstruct  gdexample.gdextension
.github/workflows/: ci.yml  github-actions-demo.yml
addon/soundfont/: import_plugin.gd  plugin.cfg
cmake/: mingw-w64-x86_64.cmake
demo/: 1080-c01.mid.import  Instrument.gd  example.sf2.import  florestan-subset.sfo.import  icon.svg.import  main.gd  main.tscn  project.godot
demo/addons/my_plugin/: import_plugin.gd  main.gd  plugin.cfg
icons/: piano.svg.import
src/: CMakeLists.txt  gdexample.cpp  gdexample.gdextension  gdexample.h  importer.h  midi.cpp  midi.h  register_types.cpp  sound_font.cpp  sound_font.h  sound_font_event.cpp  sound_font_event.h  sound_font_import.cpp  sound_font_import.h  sound_font_player.cpp  sound_font_player.h  soundfont.cpp  soundfont.h
templates/: CMakeLists.txt  gdextension.in
test/: example_broken.sf2
